2004-11-18  Tim Waugh <twaugh@redhat.com>

	* printer/HP-Color_LaserJet_4550.xml: Added IEEE 1284
	information (RH bug #139799).

2004-11-17  Tim Waugh <twaugh@redhat.com>

	* source/printer/HP-DeskJet_1220C.xml,
	  source/printer/HP-LaserJet_2200.xml,
	  source/printer/Brother-HL-5050.xml,
	  source/printer/HP-DeskJet_640C.xml,
	  source/printer/Lexmark-Z52.xml,
	  source/printer/HP-DeskJet_3820.xml,
	  source/printer/Epson-Stylus_Photo_790.xml,
	  source/printer/HP-Business_Inkjet_1100.xml,
	  source/printer/Epson-Stylus_Color_777.xml,
	  source/printer/HP-LaserJet_8150.xml: Added IEEE 1284 information,
	  from RH bugs #131220, #134912, #139271, #139266, #139258, #139629,
	  #139683.

2004-11-17  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/Postscript.xml, printer/HP-LaserJet_9040_MFP.xml,
	  printer/HP-LaserJet_9050_MFP.xml,
	  printer/HP-LaserJet_9000_MFP.xml: Done some corrections on
	  Cory's contributions.

2004-11-12 Cory Meisch <cory.meisch@hp.com>
	* Removed printer entries laserjet_9040_9050 and 9040_9050_MFP

2004-11-03 Cory Meisch <cory.meisch@hp.com>
	* added HP-LaserJet_9040_MFP and HP-LaserJet_9050_MFP.

2004-10-27  Cory Meisch <cory.meisch@hp.com>
	* added the following printers: BIJ_1200, LJ_9040_9050_MFP, LJ_9040_9050, 
	LJ_4350, LJ_4250, LJ_2430, LJ_2420, LJ_2410, LJ_1320, LJ_1160, Deskjet_6800

2004-07-30  Till Kamppeter <till.kamppeter@gmx.net>

	* added new printer entries contributed by Cory Meisch: HP Deskjet
	  5740, 3840, 3740, Officejet 6200, 7200, 7300, 7400, Photosmart
	  2600, 2700, PSC 1600, 2350

	* opt/epkowa-laser-InputSlot.xml: Corrected default paper tray
	  for Epson Kowa laser printer driver "epkowa-laser".

2004-07-28  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-EPL-N2500.xml, printer/Epson-EPL-N2500PS.xml,
	  printer/Epson-AcuLaser_C4100.xml,
	  printer/Epson-AcuLaser_C4100PS.xml, driver/Postscript.xml,
	  driver/pxlmono.xml, driver/lj5gray.xml, driver/lj5mono.xml,