@@ -2,7 +2,7 @@
  <name>epl6100l</name>
  <url>http://sourceforge.net/projects/epsonepl/</url>
  <execution>
-  <ghostscript />
+  <filter />
   <prototype>gs -q -dBATCH -dSAFER -dNOPAUSE -sProcessColorModel=DeviceGray -dBitsPerSample=1 -sDEVICE=ijs %A %Z -sIjsServer=ijs_server_epsonepl -dIjsUseOutputFD -sDeviceManufacturer=Epson -sDeviceModel=EPL6100L -sIjsParams=&quot;%B&quot; -sOutputFile=- -</prototype>
   <ppdentry>
    *DefaultResolution: 600x600dpi
