@@ -1,7 +1,12 @@
+2004-11-24  Till Kamppeter <till.kamppeter@gmx.net>
+	* driver/epl5700l.xml, driver/epl5800l.xml, driver/epl5900l.xml,
+	  driver/epl6100l.xml, driver/epl6200l.xml: Corrected driver
+	  execution style ("Filter" instead of "GhostScript").
+	
 2004-11-18  Tim Waugh <twaugh@redhat.com>
 
 	* printer/HP-Color_LaserJet_4550.xml: Added IEEE 1284
-	information (RH bug #139799).
+	  information (RH bug #139799).
 
 2004-11-17  Tim Waugh <twaugh@redhat.com>
 
